métier avancée export pdf pour le psy et patient