@@ -2,21 +2,19 @@ package controllers;
 
 import javafx.fxml.FXML;
 import javafx.geometry.Pos;
-import javafx.scene.control.Alert;
-import javafx.scene.control.Button;
-import javafx.scene.control.ButtonBar;
-import javafx.scene.control.ButtonType;
-import javafx.scene.control.Dialog;
-import javafx.scene.control.Label;
-import javafx.scene.control.TextField;
+import javafx.scene.control.*;
 import javafx.scene.layout.*;
 import javafx.scene.shape.SVGPath;
+import javafx.stage.FileChooser;
 import models.CompteRenduSeance;
 import models.CompteRenduView;
+import services.PdfCompteRenduService;
 import services.ServiceCompteRenduSeance;
 import utils.MyDatabase;
 import utils.Session;
 
+import java.io.File;
+import java.nio.file.Path;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.util.List;
@@ -44,7 +42,6 @@ public class CompteRenduReadController {
 
     private void loadCompteRendus() {
         try {
-            //Donc le patient ne voit que ses propres comptes-rendus.
             List<CompteRenduView> list = crService.findViewsByPatient(Session.getUserId());
 
             String kw = (searchField == null) ? "" : searchField.getText().toLowerCase().trim();
@@ -54,9 +51,9 @@ public class CompteRenduReadController {
                                 || (cr.getResumeSeanceCr() != null && cr.getResumeSeanceCr().toLowerCase().contains(kw))
                                 || (cr.getProchainesActionCr() != null && cr.getProchainesActionCr().toLowerCase().contains(kw))
                                 || (cr.getProgresCr() != null && cr.getProgresCr().name().toLowerCase().contains(kw))
-                ).collect(java.util.stream.Collectors.toList());
+                ).toList();
             }
-            //On efface toutes les cards, puis on reconstruit.
+
             compteRenduContainer.getChildren().clear();
 
             if (list.isEmpty()) {
@@ -116,28 +113,70 @@ public class CompteRenduReadController {
                 "M12 12c2.761 0 5-2.239 5-5S14.761 2 12 2 7 4.239 7 7s2.239 5 5 5zm0 2c-4.418 0-8 2.239-8 5v1h16v-1c0-2.761-3.582-5-8-5z",
                 "#0F766E", 14, 14
         );
-        String psyName = (cr.getPsychologistFullName() == null || cr.getPsychologistFullName().isBlank()) ? "Psychologue" : cr.getPsychologistFullName();
+        String psyName = (cr.getPsychologistFullName() == null || cr.getPsychologistFullName().isBlank())
+                ? "Psychologue"
+                : cr.getPsychologistFullName();
         Label psyLabel = new Label(psyName);
         psyLabel.setStyle("-fx-font-size: 13px; -fx-text-fill:#222;");
         psyRow.getChildren().addAll(userIcon, psyLabel);
 
         Label badge = buildProgressBadge(cr.getProgresCr());
-
-        // Rating (patient)
         HBox ratingRow = buildRatingRow(cr);
 
         VBox resumeBox = buildSection("RÉSUMÉ DE SÉANCE", cr.getResumeSeanceCr());
         VBox actionsBox = buildSection("PROCHAINES ACTIONS", cr.getProchainesActionCr());
-//buildCard() : Il n’y a pas :
-//bouton Ajouter
-//bouton Modifier
-//bouton Supprimer
-//popup showCompteRenduDialog(...)
-//handler handleDelete(...)
-        card.getChildren().addAll(dateRow, title, psyRow, badge, ratingRow, resumeBox, actionsBox);
+
+        // ✅ Icône export PDF (comme psy)
+        HBox actionRow = new HBox(10);
+        actionRow.setAlignment(Pos.CENTER_LEFT);
+
+        Button pdfBtn = iconButton(
+                "M6 2h7l5 5v15a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm7 1.5V8h4.5",
+                "#0F766E"
+        );
+        pdfBtn.setTooltip(new Tooltip("Exporter PDF"));
+        pdfBtn.setOnAction(e -> handleExportPdf(cr));
+
+        actionRow.getChildren().add(pdfBtn);
+
+        card.getChildren().addAll(dateRow, title, psyRow, badge, ratingRow, resumeBox, actionsBox, actionRow);
         return card;
     }
 
+    // ✅ EXPORT PDF
+    private void handleExportPdf(CompteRenduView cr) {
+        try {
+            FileChooser fc = new FileChooser();
+            fc.setTitle("Exporter le compte-rendu en PDF");
+            fc.getExtensionFilters().add(new FileChooser.ExtensionFilter("PDF (*.pdf)", "*.pdf"));
+
+            String psyName = (cr.getPsychologistFullName() == null) ? "psychologue" : cr.getPsychologistFullName();
+            psyName = psyName.replaceAll("[^a-zA-Z0-9-_ ]", "").trim().replace(" ", "_");
+
+            String fileName = "CompteRendu_" + psyName + "_" +
+                    (cr.getRvDate() == null ? "" : cr.getRvDate().toString()) + ".pdf";
+
+            fc.setInitialFileName(fileName);
+
+            File file = fc.showSaveDialog(compteRenduContainer.getScene().getWindow());
+            if (file == null) return;
+
+            Path out = file.toPath();
+            PdfCompteRenduService.exportCompteRendu(cr, out, "Patient");
+
+            Alert success = new Alert(Alert.AlertType.INFORMATION);
+            success.setTitle("Export réussi");
+            success.setHeaderText("PDF exporté avec succès ✅");
+            success.setContentText(file.getAbsolutePath());
+            success.showAndWait();
+
+        } catch (Exception ex) {
+            ex.printStackTrace();
+            showError("Erreur export PDF", ex);
+        }
+    }
+
+    // ─────────────── Rating (garder comme ton code) ───────────────
     private HBox buildRatingRow(CompteRenduView cr) {
         HBox row = new HBox(10);
         row.setAlignment(Pos.CENTER_LEFT);
@@ -159,7 +198,6 @@ public class CompteRenduReadController {
             if (newRating == null) return;
             try {
                 crService.updateRatingForPatient(cr.getIdCompteRendu(), Session.getUserId(), newRating);
-                // refresh
                 loadCompteRendus();
             } catch (Exception ex) {
                 showError("Erreur rating", ex);
@@ -177,10 +215,6 @@ public class CompteRenduReadController {
         return sb.toString();
     }
 
-    /**
-     * Popup de rating 1..5 avec étoiles cliquables.
-     * @return rating choisi, ou null si annuler.
-     */
     private Integer showRatingDialog(Integer currentRating) {
         Dialog<Integer> dialog = new Dialog<>();
         dialog.setTitle("Noter la séance");
@@ -207,7 +241,6 @@ public class CompteRenduReadController {
             stars[i] = star;
             starsBox.getChildren().add(star);
         }
-        // init state
         for (int k = 0; k < 5; k++) stars[k].setText(k < selected[0] ? "★" : "☆");
 
         VBox content = new VBox(8);
@@ -216,10 +249,8 @@ public class CompteRenduReadController {
         content.getChildren().addAll(hint, starsBox);
         dialog.getDialogPane().setContent(content);
 
-        // disable save if nothing selected
         Button saveButton = (Button) dialog.getDialogPane().lookupButton(saveBtn);
         saveButton.setDisable(selected[0] == 0);
-        // update disable state on click
         starsBox.setOnMouseClicked(ev -> saveButton.setDisable(selected[0] == 0));
 
         dialog.setResultConverter(btn -> btn == saveBtn ? (selected[0] == 0 ? null : selected[0]) : null);
@@ -284,6 +315,14 @@ public class CompteRenduReadController {
         wrap.setMaxSize(w, h);
         wrap.setAlignment(Pos.CENTER);
         return wrap;
+    }
+
+    private Button iconButton(String svgPath, String colorHex) {
+        Region icon = svgIcon(svgPath, colorHex, 18, 18);
+        Button btn = new Button();
+        btn.setGraphic(icon);
+        btn.setStyle("-fx-background-color: transparent; -fx-cursor: hand;");
+        return btn;
     }
 
     private void showError(String title, Exception e) {
